--- a/Styles.css
+++ b/Styles.css
@@ -311,6 +311,68 @@ header .icons i:hover{
     background-color: var(--orange);
 }
 
+.how-it-works{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.how-it-works .howitworks{
+
+    width: 100%;
+    max-width: 900px;
+    height: 350px;
+    background-color: #ffa600;
+    position: relative;
+   
+}
+
+.how-it-works .howitworks h3{
+    display: flex;
+    justify-content: center;
+    font-size: 3rem;
+    font-weight: 400;
+    /* color: #fff; */
+    margin: 15px;
+}
+
+.how-it-works .howitworks .secbox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+}
+
+.how-it-works .howitworks .secbox .imagebox{
+    box-shadow: 5px 5px 10px black;
+    margin:5px 20px;
+    height: 250px;
+    padding-top: 23px;
+    border-radius: 10px;
+    background-color: #a72b2b;
+}
+
+.how-it-works .howitworks .secbox img{
+    width: 140px;
+    margin: 0 25px;
+    border-radius: 5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
