--- a/Styles.css
+++ b/Styles.css
@@ -357,15 +357,64 @@ header .icons i:hover{
     border-radius: 5px;
 }
 
+.packages h1{
+    display: flex;
+    justify-content: center;
+    font-size: 3rem;
+    font-weight: 400;
+    color: var(--orange);
+    margin: 15px;
+}
 
+.packages .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
 
+.packages .box-container .box{
+    flex: 1 1 30rem;
+    border-radius: .5rem;
+    overflow: hidden;
+    box-shadow: 0 1rem 2rem rgba(0 , 0 , 0 , 0.1);
+}
 
+.packages .box-container .box img{
+    height: 25rem;
+    width: 100%;
+    object-fit: cover;
 
+}
 
+.packages .box-container .box .content{
+    padding: 2rem;
+}
 
+.packages .box-container .box .content h3{
+    font-size: 2rem;
+    color: #333;
+}
 
+.packages .box-container .box .content h3 i{
+    color: var(--orange);
+    margin-right: 1.5rem;
+}
 
+.packages .box-container .box .content p{
+    font-size: 1.7rem;
+    color: #666;
+    padding: 1rem 0;
+}
 
+.packages .box-container .box .button{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 15px;
+}
+
+.packages .box-container .box .button a{
+    text-decoration: none;
+}
 
 
 
