--- a/Styles.css
+++ b/Styles.css
@@ -2,6 +2,7 @@
 
 :root{
     --orange:#ffa500;
+    /* --orange:#345c00; */
 }
 
 *{
@@ -13,6 +14,7 @@
     outline: none;
     border: none;
     transition: all .2s linear;
+    
 }
 
 *::selection{
@@ -25,6 +27,7 @@ html{
     overflow-x: hidden;
     scroll-padding-top: 6rem;
     scroll-behavior:smooth;
+    background: rgb(254, 246, 231);
 }
 
 section{
@@ -198,7 +201,9 @@ header .icons i:hover{
     cursor: pointer;
     display: none;
 }
-
+/* video{
+    filter: brightness(.5);
+} */
 .home{
     min-height: 100vh;
     display: flex;
@@ -411,10 +416,190 @@ header .icons i:hover{
     justify-content: center;
     padding-bottom: 15px;
 }
-
+#buttonExploreMore{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 15px;
+}
 .packages .box-container .box .button a{
     text-decoration: none;
+    /* border-radius: 1rem; */
 }
+
+.service h1{
+    display: flex;
+    justify-content: center;
+    font-size: 3rem;
+    font-weight: 400;
+    color: var(--orange);
+    margin: 15px;
+}
+
+.service .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+
+}
+
+.service .box-container .box{
+   flex:30rem;
+   border-radius: .5rem;
+   padding: 1rem;
+   text-align: center;
+}
+
+.service .box-container .box i{
+    padding: 1rem;
+    font-size: 5rem;
+    color: var(--orange );
+}
+
+.service .box-container .box h3{
+    font-size: 2.5rem;
+    color: #333;
+}
+
+.service .box-container .box p{
+    font-size: 1.5rem;
+    color: #666;
+    padding: 1rem 0;
+}
+
+.service .box-container .box:hover{
+    box-shadow: 0 1rem 2rem rgba(0 , 0 , 0 , 0.1);
+}
+
+.gallary .heading{
+    display: flex;
+    justify-content: center;
+    font-size: 3rem;
+    font-weight: 400;
+    color: var(--orange);
+    margin: 15px;
+}
+
+.gallary .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.gallary .box-container .box{
+    overflow: hidden;
+    flex: 30rem;
+    border: 1rem solid #fff;
+    box-shadow: 0 1rem 1rem rgba(0 , 0 , 0 , 0.1);
+    height: 25rem;
+    position: relative;
+}
+
+.gallary .box-container .box img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+
+}
+
+.gallary .box-container .box .content{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    background: rgba(0 , 0 , 0 , 0.1);
+    padding: 2rem;
+    padding-top: 5rem;
+
+}
+
+.gallary .box-container .box:hover .content{
+    top: 0;
+}
+
+.gallary .box-container .box .content h3{
+    font-size: 2.5rem;
+    color: var(--orange);
+}
+
+.gallary .box-container .box .content p{
+    font-size: 1.5rem;
+    color: #eee;
+    padding: .5rem 0;
+}
+
+.review h1{
+    display: flex;
+    justify-content: center;
+    font-size: 3rem;
+    font-weight: 400;
+    color: var(--orange);
+    margin: 15px;
+}
+
+.review .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.review .box-container .box {
+    flex: 30rem;
+    border-radius: .5rem;
+    text-align: center;
+    box-shadow: 0 1rem 2rem rgba(0 , 0 , 0 , 0.1);
+    border-radius: .5rem;
+}
+
+.review .box-container .box:hover {
+    flex: 30rem;
+    border-radius: .5rem;
+    text-align: center;
+    box-shadow: 2rem 2rem 3rem rgba(0 , 0 , 0 , 0.2);
+    border-radius: .5rem;
+}
+
+.review .box-container .box img{
+   height: 13rem;
+   width: 13rem;
+   border-radius: 50%;
+   object-fit: cover;
+   margin-bottom: 1rem;
+   margin-top: 2rem;
+    
+}
+
+.review .box-container .box h3{
+    font-size: 2rem;
+    color: #333;
+
+}
+
+.review .box-container .box p{
+    font-size: 1rem;
+    color:#666;
+}
+.review .box-container .box .stars{
+    padding: 1rem;
+    color: var(--orange);
+    font-size: 1.5rem;
+}
+
+#knowmore{
+    display: flex;
+    justify-content: center;
+    margin: .7rem;
+}
+
+#knowmore a{
+    text-decoration: none;
+}
+
+
+
+
+
 
 
 
