--- a/Styles.css
+++ b/Styles.css
@@ -411,6 +411,7 @@ header .icons i:hover{
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
+    position: relative;
 }
 
 .packages .box-container .box{
@@ -451,6 +452,8 @@ header .icons i:hover{
     display: flex;
     justify-content: center;
     padding-bottom: 15px;
+    margin-bottom: 5px;
+    /* position: absolute; */
 }
 #buttonExploreMore{
     display: flex;
@@ -806,7 +809,7 @@ header .icons i:hover{
 
 .swiper{
     width: 950px;
-    /* z-index: 1  ; */
+
     /* position: relative; */
 
 }
@@ -837,7 +840,7 @@ header .icons i:hover{
     border-radius: 20px;
     margin: 20px 0;
     width: 280px;
-    box-shadow: rgba(0 , 0 , 1 , 0.5);
+    
     
 }
 
@@ -848,6 +851,7 @@ header .icons i:hover{
     width: 100%;
     background: orange;
     border-radius: 20px 20px 0 0 ;
+    
 }
 
 .developers .card .card-content{
@@ -858,6 +862,7 @@ header .icons i:hover{
     align-items: center;
     position: relative;
     z-index: 1;
+    
 }
 
 .developers .name{
