--- a/contact.css
+++ b/contact.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    /* font-weight: 200; */
 }
 body{
     background: linear-gradient(90deg, #0e3959 0%, #0e3959 30%, #03a9f5 30%, #03a9f5 100%);
@@ -36,7 +39,7 @@ body{
 }
 .contactUs .title h2{
     color: white;
-    font-weight: 500;
+    font-weight: 300;
     margin-top: -0.5em;
 }
 .form{
@@ -69,7 +72,7 @@ body{
 
 .contact h3{
     color: orange;
-    font-weight: 500;
+    font-weight: 300;
     font-size: 1.4em;
     margin-bottom: 10px;
     margin-top: -1em;
